--- a/exercises-app/frontend/src/App.css
+++ b/exercises-app/frontend/src/App.css
@@ -40,3 +40,18 @@
 .my-button {
   margin: 3px 3px 3px 3px;
 }
+
+.card-primary {
+  background-color: #007bff; /* Primary color */
+  color: #fff; /* Text color */
+}
+
+.card-secondary {
+  background-color: #6c757d; /* Secondary color */
+  color: #fff; /* Text color */
+}
+
+.card-success {
+  background-color: #28a745; /* Success color */
+  color: #fff; /* Text color */
+}
