--- a/exercises-app/frontend/src/index.css
+++ b/exercises-app/frontend/src/index.css
@@ -1,5 +1,5 @@
 body {
-  margin: 0;
+  /* margin: 0; */
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -10,20 +10,5 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
-}
-
-.card-primary {
-  background-color: #007bff; /* Primary color */
-  color: #fff; /* Text color */
-}
-
-.card-secondary {
-  background-color: #6c757d; /* Secondary color */
-  color: #fff; /* Text color */
-}
-
-.card-success {
-  background-color: #28a745; /* Success color */
-  color: #fff; /* Text color */
 }
 
