--- a/exercises-app/frontend/src/App.css
+++ b/exercises-app/frontend/src/App.css
@@ -112,7 +112,19 @@
 
 .fixed-buttons2 {
   position: fixed;
-  bottom: 75px; /* Adjust the distance from the bottom as needed */
+  bottom: 55px; /* Adjust the distance from the bottom as needed */
+  left: 10px;
+  right: 10px; /* Adjust the distance from the right as needed */
+  z-index: 1000; /* Adjust the z-index as needed */
+  display: flex; /* Use flexbox to create a row layout */
+  justify-content: space-between; /* Distribute space between buttons */
+  margin: 0 -3px; /* Negative margin to offset the margin between buttons */
+  align-items: center;
+}
+
+.fixed-buttons3 {
+  position: fixed;
+  bottom: 118px; /* Adjust the distance from the bottom as needed */
   left: 9px;
   height: 30px;
   right: 9px; /* Adjust the distance from the right as needed */
@@ -159,6 +171,6 @@
 }
 
 #emptyholder{
-  height: 110px;
+  height: 148px;
   width: max-content;
 }
